--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="I modern, responsive Single Page Application (SPA) for event management with authentication.">
+    <meta name="keywords" content="events,web,visiter,admin,crud">
+    <meta name="sitedomain" content="https://github.com/miguelcoderR/ultima ">
+    <meta name="organization" content="https://github.com/miguelcoderR">
+    <meta name="author" content="MIGUEL ANGEL ORTEGA CANTILLO">
+    <meta name="designer" content="MIGUEL ANGEL ORTEGA CANTILLO">
+    <meta name="copyright" content="© 2025 miguelcoderR. All rights reserved">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
