--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="I modern, responsive Single Page Application (SPA) for event management with authentication.">
     <meta name="keywords" content="events,web,visiter,admin,crud">
-    <meta name="sitedomain" content="https://github.com/miguelcoderR/ultima ">
+    <meta name="sitedomain" content="https://github.com/miguelcoderR/PRUEBAdesempe-oJS ">
     <meta name="organization" content="https://github.com/miguelcoderR">
     <meta name="author" content="MIGUEL ANGEL ORTEGA CANTILLO">
     <meta name="designer" content="MIGUEL ANGEL ORTEGA CANTILLO">
