--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="designer" content="MIGUEL ANGEL ORTEGA CANTILLO">
     <meta name="copyright" content="© 2025 miguelcoderR. All rights reserved">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>vent Management SPA</title>
   </head>
   <body>
     <div id="app"></div>
